--- a/styles.css
+++ b/styles.css
@@ -28,8 +28,10 @@ hr{
 /* links */
 .link
 {
+   display:inline-block;
     text-decoration: none;
     padding:.5rem 1rem;
+    margin: 1rem 0;
 }
 .link-primary
 {
@@ -122,6 +124,11 @@ hr{
     text-align: center;
     color:white;
     border-top-right-radius: 1rem;;
+}
+.footer .footer-header
+{
+    font-weight: bold;
+    font-size: large;
 }
 .footer .link{
     color:white;
